# aaclib

./: .gitignore  Makefile.am  README.md  aaclib.org  configure.ac
include/: Makefile.am  aac_list.h  aac_math.h
m4/: bear.m4
src/: Makefile.am  aac_list.c  aac_math.c
